# snib

./: CHANGELOG.md  Cargo.toml  README.md  colors.css  config.example.toml  style.css
examples/: colors.css.noctalia  hyprland-clients.jq  sway-tree.jq
src/: cli.rs  config.rs  main.rs  source.rs  ui.rs
src/capture/: image.rs  mod.rs  protocol.rs
